syntax = "proto3";

message Job {
    bytes payload = 1;
    string trace_id = 2;
}

message Email {
    string from_name = 1;
    string to_address = 2;
    string subject = 3;
    string html = 4;
}

message EmailJob {
    repeated Email emails = 1;
}

message VideoJob {
    string media_id = 1;
}
